--- a/css/estilo.css
+++ b/css/estilo.css
@@ -80,23 +80,28 @@ nav ul li{
     display: inline-block;
     width: 19%;
     font-family: 'Poppins', sans-serif;
-    font-weight: 200;
-    letter-spacing: 1px;    
+    font-weight: 400;
+    letter-spacing: 1px;  
+ 
 
 }
 
 nav ul li a{
     text-decoration: none;
-    color: white;
+    color: white; 
+
+}
+
+nav ul li:hover{
+    background-color: #2c2c2c;
 }
 
 nav ul li a:hover{
-    color: #ffaa24;
+    color: black;
+    font-weight: 600;
 }
 
-nav ul li a:active{
-    color: #4FB9AF;
-}
+
 
 
 /*finaliza header*/
@@ -107,17 +112,19 @@ nav ul li a:active{
 .h1__HamburguesasSandwich{
 
     width: 90%;
+    height: 35px;
     text-align: center;
     margin: 100px auto 50px auto;
-    padding: 2px 0 2px 0;
-    background-color: #ffaa24;
+    padding: 6px 0 1px 0;
+    background-image: linear-gradient(to top, #ffaa24, black);
     color: black;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 800;
     letter-spacing: 3px;
 
 }
+
 
 .panceta-flotante{
     position: fixed;
@@ -158,7 +165,15 @@ nav ul li a:active{
 
 }
 
+.imagenBurger{
+    width: 90%;
+    transition: all 1s;
 
+}
+
+.imagenBurger:hover{
+    transform: scale(1.15,1.15);
+}
 
 .descripcionBurger{
     display: flex;
@@ -293,6 +308,7 @@ footer{
 
 .footer__menu ul li{
     font-family: 'Poppins', sans-serif;
+    width: 18%;
     font-size: 14px;
     font-weight: 200;
     letter-spacing: 1px;    
@@ -304,8 +320,8 @@ footer{
     color: white;
 }
 
-.header__menu ul li a:hover{
-    color: #ffaa24;
+.header__menu ul li:hover{
+    color: #CCCCCC;
 }
 
 .mapouter {
@@ -331,28 +347,30 @@ footer{
 /* comienza Nuestros Productos*/
 
 .header__nuestrosProductos{
+
     background-image: url(../img/header_nuestrosProductos.jpg);
     background-repeat:no-repeat;
-    background-size: cover;
-
+    background-size: cover;     
 }
+
 
 .h2__nuestrosProductos{
     width: 90%;
+    height: 35px;
     text-align: center;
     margin: 100px auto 50px auto;
-    padding: 2px 0 2px 0;
-    background-color: #4FB9AF;
+    padding: 5px 0 2px 0;
+    background-image: linear-gradient(to top, #4FB9AF, black);
     color: black;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 800;
     letter-spacing: 3px;
 
 }
 
 .h3__nuestrosProductos{
-    margin-top: 35px;
+    margin: 0 auto 35px 0;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     font-weight: 600;
@@ -361,12 +379,68 @@ footer{
 }
 
 .main__nuestrosProductos{
-    width: 90%;
-    margin: 35px auto 0 auto;
-    padding-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;    
     border-bottom: #4FB9AF 20px solid;
 
 }
+
+.video__nuestrosProductos{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 80%;
+
+}
+
+.video__video__nuestrosProductos{
+    display: inline-block;  
+    margin: 15px auto 15px auto;
+    height: 350px;
+    background-image: url(../img/video.jpg);
+    background-repeat: no-repeat;
+
+}
+
+
+.section__nuestrosProductos {
+    width: 80%;
+    margin-top: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.nuestrosProductos__individual{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 35px;
+}
+
+.nuestrosProductos__individual__texto{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: 15px;
+
+}
+
+.nuestrosProductos__individual__imagen{
+    width: 30%;
+}
+
+.nuestrosProductos__individual__texto{
+    width: 50%;
+}
+
+
+
 
 /*finaliza Nuestros Productos*/
 
@@ -376,14 +450,15 @@ footer{
 .h2__pedido{
 
     width: 90%;
+    height: 35px;
     text-align: center;
     margin: 100px auto 50px auto;
-    padding: 2px 0 2px 0;
-    background-color: #4FB9AF;
+    padding: 5px 0 2px 0;
+    background-image: linear-gradient(to top, #4FB9AF, black);
     color: black;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 800;
     letter-spacing: 3px;
 
 }
@@ -478,47 +553,48 @@ textarea{
   
   .Detalle-C { grid-area: Detalle-C; }
   
-  .Simple-C { grid-area: Simple-C;text-align: end; padding-right: 15px; }
+  .Simple-C { grid-area: Simple-C; }
   
-  .Doble-c { grid-area: Doble-c; text-align: end; padding-right: 15px; }
+  .Doble-c { grid-area: Doble-c;  }
   
-  .Triple-C { grid-area: Triple-C; text-align: end; padding-right: 15px; }
+  .Triple-C { grid-area: Triple-C;  }
   
   .Detalle-R { grid-area: Detalle-R; }
   
-  .Simple-R { grid-area: Simple-R; text-align: end; padding-right: 15px; }
+  .Simple-R { grid-area: Simple-R;  }
   
-  .Doble-R { grid-area: Doble-R; text-align: end; padding-right: 15px; }
+  .Doble-R { grid-area: Doble-R; }
   
-  .Triple-R { grid-area: Triple-R; text-align: end; padding-right: 15px; }
+  .Triple-R { grid-area: Triple-R;  }
   
   .Detalle-Dc { grid-area: Detalle-Dc; }
   
-  .Simple-Dc { grid-area: Simple-Dc; text-align: end; padding-right: 15px; }
+  .Simple-Dc { grid-area: Simple-Dc;  }
   
-  .Doble-Dc { grid-area: Doble-Dc; text-align: end; padding-right: 15px; }
+  .Doble-Dc { grid-area: Doble-Dc;  }
   
-  .Triple-Dc { grid-area: Triple-Dc; text-align: end; padding-right: 15px; }
+  .Triple-Dc { grid-area: Triple-Dc; }
   
   .Detalle-P { grid-area: Detalle-P;  }
   
-  .Simple-P { grid-area: Simple-P; text-align: end; padding-right: 15px; }
+  .Simple-P { grid-area: Simple-P;  }
   
-  .Doble-P { grid-area: Doble-P; text-align: end; padding-right: 15px; }
+  .Doble-P { grid-area: Doble-P;  }
   
-  .Triple-P { grid-area: Triple-P; text-align: end; padding-right: 15px; }
+  .Triple-P { grid-area: Triple-P;  }
   
   .Detalle-V { grid-area: Detalle-V; }
   
-  .Simple-V { grid-area: Simple-V; text-align: end; padding-right: 15px; }
+  .Simple-V { grid-area: Simple-V;  }
   
-  .Doble-V { grid-area: Doble-V; text-align: end; padding-right: 15px; }
+  .Doble-V { grid-area: Doble-V; }
   
-  .Triple-V { grid-area: Triple-V; text-align: end; padding-right: 15px; }
+  .Triple-V { grid-area: Triple-V;  }
   
 .precio{
     font-style: italic;
     font-weight: 600;
+    text-align: end; padding-right: 15px;
 }
 
 .nombreMenu{
@@ -554,14 +630,15 @@ textarea{
 
 .h2__menu{
     width: 90%;
+    height: 35px;
     text-align: center;
     margin: 100px auto 50px auto;
-    padding: 2px 0 2px 0;
-    background-color: #ffaa24;
+    padding: 5px 0 2px 0;
+    background-image: linear-gradient(to top, #ffaa24, black);
     color: black;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 800;
     letter-spacing: 3px;
  
 }
@@ -583,6 +660,7 @@ p{
     font-size: 14px;
   
 }
+
 
 
 
